set zsh as the default shell for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,9 @@ set -g default-terminal "xterm-256color"
 #set -g status-utf8 on
 set-option -g allow-rename off
 
+#set default shell to be zsh
+set-option -g default-shell /bin/zsh
+
 # pane movement shortcuts
 bind h select-pane -L
 bind j select-pane -D
